--- a/.github/workflows/blog-workflow.yml
+++ b/.github/workflows/blog-workflow.yml
@@ -1,7 +1,7 @@
 name: Latest blog post workflow
 on:
   schedule: # Run workflow automatically
-    - cron: '0 12 1 * *' # Runs every day at 12:00 UTC
+    - cron: '0 12 */1 * *' # Runs every day at 12:00 UTC
   workflow_dispatch: # Run workflow manually (without waiting for the cron to be called), through the Github Actions Workflow page directly
 
 jobs:
