--- a/.github/workflows/blog-workflow.yml
+++ b/.github/workflows/blog-workflow.yml
@@ -14,4 +14,4 @@ jobs:
       - name: Pull in dev.to posts
         uses: gautamkrishnar/blog-post-workflow@master
         with:
-          feed_list: "https://www.youtube.com/feeds/videos.xml?channel_id=UCG8RBpC5Z3Gq1wpjzsjvAMA"
+          feed_list: "https://vinvapp.github.io/feed.xml"
